# ini_master

./: README.md  master.c
can_discovery_master/: CMakeLists.txt
can_discovery_master/main/: main.c
master/: sdkconfig
master/components/canopennodeesp32/: CMakeLists.txt  CO_driver.c  CO_driver_target.h  OD.c  OD.h
master/components/canopennodeesp32/301/: CO_Emergency.h
master/components/canopennodeesp32/example/: CO_driver_blank.c
master/main/: main.c
